# blaze-svg

./: .travis.yml  CHANGES.md  README  README.md  blaze-svg.cabal
Text/Blaze/: Svg.hs  Svg11.hs
Text/Blaze/Svg/: Internal.hs
Text/Blaze/Svg/Renderer/: Text.hs
Text/Blaze/Svg11/: Attributes.hs
Util/: GenerateSvgCombinators.hs
examples/: Example.hs
src/Text/Blaze/: Svg.hs  Svg11.hs
src/Text/Blaze/Svg/: Internal.hs
src/Text/Blaze/Svg11/: Attributes.hs
src/Util/: GenerateSvgCombinators.hs
