name:                blaze-svg
version:             0.1.0.0
synopsis:            SVG combinator library
-- description:
homepage:            https://github.com/deepakjois/blaze-svg
license:             BSD3
license-file:        LICENSE
author:              Deepak Jois
maintainer:          deepak.jois@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.6

Extra-source-files:
  Util/Sanitize.hs
  Util/GenerateSvgCombinators.hs

Library
  Ghc-Options:       -Wall

  Exposed-modules:
    Text.Blaze.Svg11
    Text.Blaze.Svg11.Attributes
    Text.Blaze.Svg.Internal

  Build-depends:
    base          >= 4 && < 5,
    blaze-html    >= 0.4 && < 0.5,
    bytestring    >= 0.9

Source-repository head
  Type:     git
  Location: http://github.com/deepakjois/blaze-svg.git
